@@ -126,13 +126,13 @@ class FeedsUserProcessor extends FeedsProcessor {
   /**
    * Override setTargetElement to operate on a target item that is a node.
    */
-  public function setTargetElement($target_user, $target_element, $value) {
+  public function setTargetElement(FeedsSource $source, $target_user, $target_element, $value) {
     switch ($target_element) {
       case 'created':
         $target_user->created = feeds_to_unixtime($value, REQUEST_TIME);
         break;
       default:
-        parent::setTargetElement($target_user, $target_element, $value);
+        parent::setTargetElement($source, $target_user, $target_element, $value);
         break;
     }
   }
